--- a/index.html
+++ b/index.html
@@ -1,158 +1,10 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Aplikasi</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 1200px;
-            width: 100%;
-        }
-
-        .header {
-            text-align: center;
-            color: white;
-            margin-bottom: 50px;
-        }
-
-        .header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-        }
-
-        .header p {
-            font-size: 1.2em;
-            opacity: 0.9;
-        }
-
-        .menu-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-            padding: 20px;
-        }
-
-        .menu-card {
-            background: white;
-            border-radius: 15px;
-            padding: 30px;
-            text-align: center;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            cursor: pointer;
-            text-decoration: none;
-            color: inherit;
-            display: block;
-        }
-
-        .menu-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.3);
-        }
-
-        .menu-icon {
-            font-size: 3em;
-            margin-bottom: 20px;
-        }
-
-        .menu-card h3 {
-            color: #667eea;
-            font-size: 1.3em;
-            margin-bottom: 10px;
-        }
-
-        .menu-card p {
-            color: #666;
-            font-size: 0.95em;
-            line-height: 1.5;
-        }
-
-        .menu-card.primary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-        }
-
-        .menu-card.primary h3 {
-            color: white;
-        }
-
-        .menu-card.primary p {
-            color: rgba(255,255,255,0.9);
-        }
-
-        @media (max-width: 768px) {
-            .header h1 {
-                font-size: 2em;
-            }
-
-            .menu-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+  <title>Selamat Datang</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Portal Aplikasi</h1>
-            <p>Pilih menu yang ingin Anda akses</p>
-        </div>
-
-        <div class="menu-grid">
-            <a href="https://script.google.com/macros/s/AKfycbyxFq3zLiiDbbFQsJAWaymaKPURJ9YpK5iEcfqLaTqgi-X5TVGPTJecTgl9HTOkyf-L/exec?utm_medium=social&utm_source=heylink.me" class="menu-card primary" target="_blank">
-                <div class="menu-icon">📅</div>
-                <h3>Jadwal Pelaksanaan dan Pengiriman</h3>
-                <p>Kelola dan lihat jadwal pelaksanaan serta pengiriman</p>
-            </a>
-
-            <div class="menu-card">
-                <div class="menu-icon">📊</div>
-                <h3>Data Laporan</h3>
-                <p>Akses laporan dan analisis data</p>
-            </div>
-
-            <div class="menu-card">
-                <div class="menu-icon">👥</div>
-                <h3>Manajemen User</h3>
-                <p>Kelola pengguna dan hak akses</p>
-            </div>
-
-            <div class="menu-card">
-                <div class="menu-icon">⚙️</div>
-                <h3>Pengaturan</h3>
-                <p>Konfigurasi sistem dan preferensi</p>
-            </div>
-
-            <div class="menu-card">
-                <div class="menu-icon">📝</div>
-                <h3>Form Input</h3>
-                <p>Input data dan formulir</p>
-            </div>
-
-            <div class="menu-card">
-                <div class="menu-icon">📈</div>
-                <h3>Dashboard</h3>
-                <p>Visualisasi dan monitoring real-time</p>
-            </div>
-        </div>
-    </div>
+  <h1>Selamat Datang</h1>
+  <p>Dashboard Satpam</p>
 </body>
 </html>
