--- a/index.html
+++ b/index.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Selamat Datang</title>
+  <meta charset="UTF-8">
+  <title>Dashboard Satpam</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f2f5f9;
+    }
+
+    header {
+      background: #0a3d91;
+      color: white;
+      padding: 25px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 22px;
+    }
+
+    header p {
+      margin-top: 8px;
+      font-size: 14px;
+      opacity: 0.9;
+    }
+
+    .menu {
+      padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 15px;
+    }
+
+    .menu a {
+      background: white;
+      color: #0a3d91;
+      text-decoration: none;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      font-weight: bold;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+    }
+
+    .menu a:hover {
+      background: #e7efff;
+    }
+
+    footer {
+      text-align: center;
+      padding: 12px;
+      font-size: 12px;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
+
+<header>
   <h1>Selamat Datang</h1>
-  <p>Dashboard Satpam</p>
+  <p>Sistem Informasi Jadwal & Personil</p>
+</header>
+
+<section class="menu">
+  <a href="pages/jadwal-kerja.html">JADWAL PELAKSANAAN KERJA</a>
+  <a href="pages/jadwal-absensi.html">JADWAL PENGIRIMAN ABSENSI</a>
+  <a href="pages/backup-personil.html">FORM PERSONIL BACKUP</a>
+  <a href="pages/timesheet.html">TIMESHEET MAKER</a>
+  <a href="pages/hubungi-admin.html">HUBUNGI ADMIN</a>
+</section>
+
+<footer>
+  © 2025 Dashboard Satpam
+</footer>
+
 </body>
 </html>
