--- a/pages/backup-personil.html
+++ b/pages/backup-personil.html
@@ -5,48 +5,48 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Form Backup Personil</title>
 <style>
-body { font-family: Arial, sans-serif; background: #0a0a0a; color: #00ffff; padding: 20px; }
-.container { max-width: 600px; margin: auto; background: rgba(15,15,25,0.95); padding: 24px; border-radius: 16px; }
-h1 { text-align: center; margin-bottom: 24px; }
-label { display: block; margin-bottom: 6px; font-weight: bold; }
-input, textarea, select, button { width: 100%; padding: 12px; margin-bottom: 18px; border-radius: 8px; border: 1px solid #00ffff; background: rgba(0,0,0,0.8); color: #00ffff; }
-button { cursor: pointer; font-weight: bold; background: #00ffff; color: #000; border: none; }
-button:disabled { opacity: 0.5; cursor: not-allowed; }
-.alert { display: none; padding: 12px; margin-bottom: 18px; border-radius: 8px; font-weight: bold; }
-.alert-success { background: rgba(0,255,100,0.2); color: #00ff66; }
-.alert-error { background: rgba(255,0,100,0.2); color: #ff0066; }
+    body { font-family: Arial, sans-serif; background: #0a0a0a; color: #00ffff; margin:0; padding:0; display:flex; justify-content:center; align-items:center; height:100vh; }
+    .card { background: rgba(15,15,25,0.95); padding:30px; border-radius:16px; width:100%; max-width:500px; box-shadow:0 0 20px #00ffff; }
+    h1 { text-align:center; margin-bottom:20px; color:#00ffff; }
+    label { display:block; margin:12px 0 6px; }
+    input, textarea { width:100%; padding:12px; border-radius:8px; border:1px solid #00ffff; background: rgba(10,10,20,0.8); color:#00ffff; }
+    button { width:100%; padding:12px; margin-top:20px; border:none; border-radius:8px; background:#00ffff; color:#000; font-weight:bold; cursor:pointer; }
+    .alert { display:none; padding:10px; border-radius:8px; margin-top:15px; text-align:center; font-weight:bold; }
+    .success { background:#00ff66; color:#000; }
+    .error { background:#ff0066; color:#fff; }
 </style>
 </head>
 <body>
-<div class="container">
+
+<div class="card">
     <h1>Form Backup Personil</h1>
 
-    <div id="alertSuccess" class="alert alert-success">✅ DATA TERSIMPAN</div>
-    <div id="alertError" class="alert alert-error">⚠️ GAGAL MENYIMPAN DATA</div>
+    <div id="alertSuccess" class="alert success">✅ Data tersimpan!</div>
+    <div id="alertError" class="alert error">⚠️ Gagal menyimpan data</div>
 
     <form id="formBackup">
         <label>Nama *</label>
-        <input type="text" id="nama" name="nama" placeholder="Nama lengkap" required>
+        <input type="text" id="nama" name="nama" required>
 
         <label>Tanggal Backup *</label>
         <input type="date" id="tanggalBackup" name="tanggalBackup" required>
 
         <label>Backup Unit *</label>
-        <input type="text" id="backupUnit" name="backupUnit" placeholder="Unit / Pos" required>
+        <input type="text" id="backupUnit" name="backupUnit" required>
 
         <label>Backup Personil *</label>
-        <input type="text" id="backupPersonil" name="backupPersonil" placeholder="Nama personil yang di-backup" required>
+        <input type="text" id="backupPersonil" name="backupPersonil" required>
 
         <label>Shift Backup *</label>
-        <input type="text" id="shiftBackup" name="shiftBackup" placeholder="Pagi/Siang/Malam" required>
+        <input type="text" id="shiftBackup" name="shiftBackup" required>
 
         <label>Keterangan Backup *</label>
-        <textarea id="keteranganBackup" name="keteranganBackup" placeholder="Alasan / kondisi / info" required></textarea>
+        <textarea id="keteranganBackup" name="keteranganBackup" required></textarea>
 
         <label>Mengetahui *</label>
-        <input type="text" id="mengetahui" name="mengetahui" placeholder="Supervisor / Koordinator" required>
+        <input type="text" id="mengetahui" name="mengetahui" required>
 
-        <button type="submit" id="btnSubmit">KIRIM DATA</button>
+        <button type="submit">Kirim Data</button>
     </form>
 </div>
 
@@ -54,15 +54,14 @@ button:disabled { opacity: 0.5; cursor: not-allowed; }
 const GS_URL = "https://script.google.com/macros/s/AKfycbxhMzwg7or1DLLXexCgpUAZwh1IzqBZK1LRAAWoHeV7Qi6z1jFCl0IkVnExvEaLFbe-/exec";
 
 const form = document.getElementById('formBackup');
-const btnSubmit = document.getElementById('btnSubmit');
 const alertSuccess = document.getElementById('alertSuccess');
 const alertError = document.getElementById('alertError');
 
-form.addEventListener('submit', async function(e) {
+form.addEventListener('submit', async function(e){
     e.preventDefault();
+
     alertSuccess.style.display = 'none';
     alertError.style.display = 'none';
-    btnSubmit.disabled = true;
 
     const data = {
         nama: document.getElementById('nama').value.trim(),
@@ -81,19 +80,18 @@ form.addEventListener('submit', async function(e) {
             body: JSON.stringify(data)
         });
         const result = await res.json();
-        if (result.status === "success") {
+        if(result.status === "success"){
             alertSuccess.style.display = 'block';
             form.reset();
-            setTimeout(() => alertSuccess.style.display = 'none', 3000);
+            setTimeout(()=> alertSuccess.style.display='none',3000);
         } else {
             alertError.style.display = 'block';
         }
-    } catch(err) {
+    } catch(err){
         alertError.style.display = 'block';
-        console.error(err);
     }
-    btnSubmit.disabled = false;
 });
 </script>
+
 </body>
 </html>
