--- a/pages/backup-personil.html
+++ b/pages/backup-personil.html
@@ -602,7 +602,7 @@
                 
                 <div class="form-group">
                     <label for="mengetahui">✅ Mengetahui</label>
-                    <input type="text" id="mengetahui" required placeholder="Nama atasan/supervisor">
+                    <input type="text" id="mengetahui" required placeholder="Nama Koordinator / Penanggung Jawab">
                 </div>
                 
                 <button type="submit" class="btn" id="submitBtn">💾 Simpan Data</button>
