--- a/pages/jadwal-kerja.html
+++ b/pages/jadwal-kerja.html
@@ -1,10 +1,196 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Jadwal Pelaksanaan Kerja</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jadwal Pelaksanaan Kerja</title>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<style>
+body { font-family: Arial, sans-serif; padding: 20px; background: #f0f4ff; }
+h1 { text-align: center; }
+.controls { display: flex; gap: 20px; margin-bottom: 20px; justify-content: center; }
+select, button { padding: 10px; font-size: 1rem; }
+table { width: 100%; border-collapse: collapse; margin-top: 20px; table-layout: fixed; }
+th, td { border: 1px solid #999; padding: 5px; text-align: center; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+th { background: #667eea; color: white; }
+td.editable { background: #fffbe0; cursor: pointer; }
+td.editable:focus { outline: 2px solid #667eea; }
+th:nth-child(1), td:nth-child(1) { width: 40px; }
+th:nth-child(2), td:nth-child(2) { width: 120px; }
+.actions { margin-top: 20px; display: flex; gap: 10px; justify-content: center; flex-wrap: wrap; }
+#saveIndicator { position: fixed; bottom: 20px; right: 20px; background: #667eea; color: #fff; padding: 10px 15px; border-radius: 10px; display: none; }
+</style>
 </head>
 <body>
-  <h2>Jadwal Pelaksanaan Kerja</h2>
-  <a href="../index.html">Kembali</a>
+<h1>📋 Jadwal Pelaksanaan Kerja</h1>
+
+<div class="controls">
+  <div>
+    <label>📅 Pilih Periode</label><br>
+    <select id="selectPeriode"><option value="">-- Pilih Periode --</option></select>
+  </div>
+  <div>
+    <label>🏢 Pilih Unit</label><br>
+    <select id="selectUnit"><option value="">-- Pilih Unit --</option></select>
+  </div>
+</div>
+
+<div id="tableContainer">
+  <p style="text-align:center; color:#555;">Pilih periode dan unit untuk menampilkan jadwal</p>
+</div>
+
+<div class="actions">
+  <button id="btnEdit" onclick="toggleEditMode()">✏️ Edit Jadwal</button>
+  <button onclick="downloadPNG()">📷 Download PNG</button>
+  <button onclick="downloadExcel()">📊 Download Excel</button>
+  <button onclick="downloadPDF()">📄 Download PDF</button>
+</div>
+
+<div id="saveIndicator">Tersimpan</div>
+
+<script>
+const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxGqinkOUMP_gN493Vg2O9BsXPlio6I8RwUkcNe9o2v18QiCSkB_CA6RqyJXI-Gfr6JVw/exec';
+let currentJadwal = null;
+let isEditMode = false;
+
+async function init() {
+  try {
+    const periodeRes = await fetch(`${APPS_SCRIPT_URL}?action=getAvailableMonths&mode=PEL`);
+    const periodeData = await periodeRes.json();
+    const selPeriode = document.getElementById('selectPeriode');
+    periodeData.forEach(p => {
+      const opt = document.createElement('option');
+      opt.value = p.value;
+      opt.textContent = p.label;
+      selPeriode.appendChild(opt);
+    });
+
+    const unitRes = await fetch(`${APPS_SCRIPT_URL}?action=getUnits`);
+    const unitData = await unitRes.json();
+    const selUnit = document.getElementById('selectUnit');
+    unitData.forEach(u => {
+      const opt = document.createElement('option');
+      opt.value = u;
+      opt.textContent = u;
+      selUnit.appendChild(opt);
+    });
+  } catch(e) { console.error(e); showSaveIndicator('Error load dropdown', 3000);}
+}
+
+async function loadJadwal() {
+  const sheetName = document.getElementById('selectPeriode').value;
+  const unit = document.getElementById('selectUnit').value;
+  if (!sheetName || !unit) return;
+
+  try {
+    const res = await fetch(`${APPS_SCRIPT_URL}?action=getJadwal&mode=PEL&sheetName=${sheetName}&unit=${unit}`);
+    const data = await res.json();
+    currentJadwal = data;
+    renderTable();
+  } catch(e) { console.error(e); showSaveIndicator('Error load jadwal',3000);}
+}
+
+function renderTable() {
+  if (!currentJadwal) return;
+  const container = document.getElementById('tableContainer');
+  container.innerHTML = '';
+  const table = document.createElement('table');
+
+  const thead = document.createElement('thead');
+  const tr1 = document.createElement('tr');
+  tr1.appendChild(document.createElement('th')).textContent = 'No';
+  tr1.appendChild(document.createElement('th')).textContent = 'Nama';
+  currentJadwal.headerTanggal.forEach(t => tr1.appendChild(document.createElement('th')).textContent = t);
+  thead.appendChild(tr1);
+  table.appendChild(thead);
+
+  const tbody = document.createElement('tbody');
+  currentJadwal.personil.forEach((p, idx) => {
+    const tr = document.createElement('tr');
+    tr.appendChild(document.createElement('td')).textContent = p.no;
+    tr.appendChild(document.createElement('td')).textContent = p.nama;
+    p.jadwal.forEach((j, jIdx) => {
+      const td = document.createElement('td');
+      td.textContent = j;
+      td.classList.add('editable');
+      td.contentEditable = isEditMode;
+      td.addEventListener('blur', () => saveCell(idx, jIdx, td.textContent));
+      tr.appendChild(td);
+    });
+    tbody.appendChild(tr);
+  });
+  table.appendChild(tbody);
+  container.appendChild(table);
+}
+
+function toggleEditMode() {
+  isEditMode = !isEditMode;
+  document.querySelectorAll('td.editable').forEach(td => td.contentEditable = isEditMode);
+  document.getElementById('btnEdit').textContent = isEditMode ? '✅ Selesai Edit' : '✏️ Edit Jadwal';
+  if(!isEditMode) showSaveIndicator('Edit selesai');
+}
+
+function showSaveIndicator(msg='Tersimpan', duration=2000) {
+  const el = document.getElementById('saveIndicator');
+  el.textContent = msg;
+  el.style.display = 'block';
+  setTimeout(()=>el.style.display='none',duration);
+}
+
+async function saveCell(pIdx,jIdx,value){
+  const sheetName = document.getElementById('selectPeriode').value;
+  const unit = document.getElementById('selectUnit').value;
+  if(!sheetName || !unit) return;
+
+  try{
+    await fetch(APPS_SCRIPT_URL+'?action=saveSingleCell',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({mode:'PEL',sheetName,unit,pIdx,jIdx,value})
+    });
+    showSaveIndicator('Tersimpan');
+  }catch(e){console.error(e); showSaveIndicator('Error menyimpan',2000);}
+}
+
+// Download PNG
+function downloadPNG(){
+  html2canvas(document.querySelector('#tableContainer')).then(canvas=>{
+    const link=document.createElement('a');
+    link.download='jadwal.png';
+    link.href=canvas.toDataURL();
+    link.click();
+  });
+}
+
+// Download Excel
+function downloadExcel(){
+  if(!currentJadwal) return;
+  const wb=XLSX.utils.book_new();
+  const wsData=[[ 'No','Nama',...currentJadwal.headerTanggal]];
+  currentJadwal.personil.forEach(p=>wsData.push([p.no,p.nama,...p.jadwal]));
+  const ws=XLSX.utils.aoa_to_sheet(wsData);
+  XLSX.utils.book_append_sheet(wb,ws,'Jadwal');
+  XLSX.writeFile(wb,'jadwal.xlsx');
+}
+
+// Download PDF
+function downloadPDF(){
+  html2canvas(document.querySelector('#tableContainer')).then(canvas=>{
+    const imgData=canvas.toDataURL('image/png');
+    const pdf=new jspdf.jsPDF('landscape');
+    const imgProps=pdf.getImageProperties(imgData);
+    const pdfWidth=pdf.internal.pageSize.getWidth();
+    const pdfHeight=(imgProps.height*pdfWidth)/imgProps.width;
+    pdf.addImage(imgData,'PNG',0,0,pdfWidth,pdfHeight);
+    pdf.save('jadwal.pdf');
+  });
+}
+
+document.getElementById('selectPeriode').addEventListener('change',loadJadwal);
+document.getElementById('selectUnit').addEventListener('change',loadJadwal);
+document.addEventListener('DOMContentLoaded',init);
+</script>
 </body>
 </html>
