--- a/pages/jadwal-kerja.html
+++ b/pages/jadwal-kerja.html
@@ -4,18 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jadwal Pelaksanaan Kerja</title>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
 <style>
 body { font-family: Arial, sans-serif; padding: 20px; background: #f0f4ff; }
 h1 { text-align: center; }
 .controls { display: flex; gap: 20px; margin-bottom: 20px; justify-content: center; }
 select, button { padding: 10px; font-size: 1rem; }
 table { width: 100%; border-collapse: collapse; margin-top: 20px; table-layout: fixed; }
-th, td { border: 1px solid #999; padding: 8px; text-align: center; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+th, td { border: 1px solid #999; padding: 5px; text-align: center; word-wrap: break-word; }
 th { background: #667eea; color: white; }
 td.editable { background: #fffbe0; cursor: pointer; }
 td.editable:focus { outline: 2px solid #667eea; }
@@ -24,7 +19,6 @@ td.editable:focus { outline: 2px solid #667eea; }
 </style>
 </head>
 <body>
-
 <h1>📋 Jadwal Pelaksanaan Kerja</h1>
 
 <div class="controls">
@@ -39,55 +33,46 @@ td.editable:focus { outline: 2px solid #667eea; }
 </div>
 
 <div id="tableContainer">
-  <p style="text-align:center; color:#555;">Pilih periode & unit untuk menampilkan jadwal</p>
+  <p style="text-align:center; color:#555;">Pilih periode dan unit untuk menampilkan jadwal</p>
 </div>
 
 <div class="actions">
   <button id="btnEdit" onclick="toggleEditMode()">✏️ Edit Jadwal</button>
-  <button onclick="downloadPNG()">📷 Download PNG</button>
-  <button onclick="downloadExcel()">📊 Download Excel</button>
-  <button onclick="downloadPDF()">📄 Download PDF</button>
+  <button onclick="saveAll()">💾 Simpan Semua</button>
 </div>
 
 <div id="saveIndicator">Tersimpan</div>
 
 <script>
 const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwgiV7lP6JnF6LwFzz6y3fo0l2s4unYuDfSPV8PZufVsyT8Jds4WOEy8yZDQSXEJwjjtw/exec';
-
 let currentJadwal = null;
 let isEditMode = false;
 
-// Inisialisasi dropdown
+// Inisialisasi dropdown periode & unit
 async function init() {
   try {
-    // Periode
-    const resPer = await fetch(`${APPS_SCRIPT_URL}?action=getAvailableMonths&mode=PEL`);
-    const periodeData = await resPer.json();
-    const selPer = document.getElementById('selectPeriode');
+    const periodeRes = await fetch(`${APPS_SCRIPT_URL}?action=getAvailableMonths&mode=PEL`);
+    const periodeData = await periodeRes.json();
+    const selPeriode = document.getElementById('selectPeriode');
     periodeData.forEach(p => {
-      const o = document.createElement('option');
-      o.value = p.value;
-      o.textContent = p.label;
-      selPer.appendChild(o);
+      const opt = document.createElement('option');
+      opt.value = p.value;
+      opt.textContent = p.label;
+      selPeriode.appendChild(opt);
     });
 
-    // Unit
-    const resUnit = await fetch(`${APPS_SCRIPT_URL}?action=getUnits`);
-    const unitData = await resUnit.json();
+    const unitRes = await fetch(`${APPS_SCRIPT_URL}?action=getUnits`);
+    const unitData = await unitRes.json();
     const selUnit = document.getElementById('selectUnit');
     unitData.forEach(u => {
-      const o = document.createElement('option');
-      o.value = u;
-      o.textContent = u;
-      selUnit.appendChild(o);
+      const opt = document.createElement('option');
+      opt.value = u;
+      opt.textContent = u;
+      selUnit.appendChild(opt);
     });
-  } catch (e) {
-    console.error(e);
-    showSaveIndicator('Error load dropdown', 3000);
-  }
+  } catch(e) { console.error(e); showSaveIndicator('Error load dropdown', 3000);}
 }
 
-// Load jadwal untuk periode & unit
 async function loadJadwal() {
   const sheetName = document.getElementById('selectPeriode').value;
   const unit = document.getElementById('selectUnit').value;
@@ -98,127 +83,90 @@ async function loadJadwal() {
     const data = await res.json();
     currentJadwal = data;
     renderTable();
-  } catch (e) {
-    console.error(e);
-    showSaveIndicator('Error load jadwal', 3000);
-  }
+  } catch(e) { console.error(e); showSaveIndicator('Error load jadwal',3000);}
 }
 
-// Render tabel
 function renderTable() {
+  if (!currentJadwal) return;
   const container = document.getElementById('tableContainer');
   container.innerHTML = '';
-  if (!currentJadwal) return;
-
   const table = document.createElement('table');
 
-  // Header
   const thead = document.createElement('thead');
-  const trh = document.createElement('tr');
-  trh.appendChild(document.createElement('th')).textContent = 'No';
-  trh.appendChild(document.createElement('th')).textContent = 'Nama';
-  currentJadwal.headerTanggal.forEach(t => {
-    trh.appendChild(document.createElement('th')).textContent = t;
-  });
-  thead.appendChild(trh);
+  const tr1 = document.createElement('tr');
+  tr1.appendChild(document.createElement('th')).textContent = 'No';
+  tr1.appendChild(document.createElement('th')).textContent = 'Nama';
+  currentJadwal.headerTanggal.forEach(t => tr1.appendChild(document.createElement('th')).textContent = t);
+  thead.appendChild(tr1);
   table.appendChild(thead);
 
-  // Body
   const tbody = document.createElement('tbody');
-  currentJadwal.personil.forEach((p, pi) => {
+  currentJadwal.personil.forEach((p, idx) => {
     const tr = document.createElement('tr');
     tr.appendChild(document.createElement('td')).textContent = p.no;
     tr.appendChild(document.createElement('td')).textContent = p.nama;
-    p.jadwal.forEach((cell, ci) => {
+    p.jadwal.forEach((j, jIdx) => {
       const td = document.createElement('td');
-      td.textContent = cell;
+      td.textContent = j;
       td.classList.add('editable');
       td.contentEditable = isEditMode;
-      td.addEventListener('blur', () => saveCell(pi, ci, td.textContent));
+      td.addEventListener('blur', () => saveCell(idx, jIdx, td.textContent));
       tr.appendChild(td);
     });
     tbody.appendChild(tr);
   });
   table.appendChild(tbody);
-
   container.appendChild(table);
 }
 
-// Toggle edit mode
 function toggleEditMode() {
   isEditMode = !isEditMode;
   document.querySelectorAll('td.editable').forEach(td => td.contentEditable = isEditMode);
   document.getElementById('btnEdit').textContent = isEditMode ? '✅ Selesai Edit' : '✏️ Edit Jadwal';
-  if (!isEditMode) showSaveIndicator('Edit selesai');
+  if(!isEditMode) showSaveIndicator('Edit selesai');
 }
 
-// Show indikator
-function showSaveIndicator(msg = 'Tersimpan', dur=2000) {
+function showSaveIndicator(msg='Tersimpan', duration=2000) {
   const el = document.getElementById('saveIndicator');
   el.textContent = msg;
   el.style.display = 'block';
-  setTimeout(()=>el.style.display='none', dur);
+  setTimeout(()=>el.style.display='none',duration);
 }
 
-// Save per sel
-async function saveCell(pIdx, jIdx, value) {
-  try {
-    // POST JSON
-    await fetch(APPS_SCRIPT_URL+'?action=saveSingleCell', {
+async function saveCell(pIdx,jIdx,value){
+  const sheetName = document.getElementById('selectPeriode').value;
+  const unit = document.getElementById('selectUnit').value;
+  if(!sheetName || !unit) return;
+
+  try{
+    await fetch(APPS_SCRIPT_URL+'?action=saveSingleCell',{
       method:'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify({
-        mode:'PEL',
-        sheetName: document.getElementById('selectPeriode').value,
-        unit: document.getElementById('selectUnit').value,
-        pIdx, jIdx, value
-      })
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({mode:'PEL',sheetName,unit,pIdx,jIdx,value})
     });
-    showSaveIndicator();
-  } catch (e) {
-    console.error(e);
-    showSaveIndicator('Error menyimpan', 2000);
-  }
+    showSaveIndicator('Tersimpan');
+  }catch(e){console.error(e); showSaveIndicator('Error menyimpan',2000);}
 }
 
-// Download PNG
-function downloadPNG() {
-  html2canvas(document.querySelector('#tableContainer')).then(canvas => {
-    const link = document.createElement('a');
-    link.download = 'jadwal.png';
-    link.href = canvas.toDataURL();
-    link.click();
-  });
+async function saveAll(){
+  const sheetName = document.getElementById('selectPeriode').value;
+  const unit = document.getElementById('selectUnit').value;
+  if(!sheetName || !unit || !currentJadwal) return;
+
+  try{
+    const jadwalData = currentJadwal.personil.map(p=>({no:p.no,nama:p.nama,jadwal:p.jadwal}));
+    await fetch(APPS_SCRIPT_URL+'?action=saveJadwal',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({mode:'PEL',sheetName,unit,jadwalData})
+    });
+    showSaveIndicator('Semua tersimpan');
+  }catch(e){console.error(e); showSaveIndicator('Error menyimpan semua',2000);}
 }
 
-// Download Excel
-function downloadExcel() {
-  if(!currentJadwal) return;
-  const wb = XLSX.utils.book_new();
-  const header = ['No','Nama',...currentJadwal.headerTanggal];
-  const rows  = currentJadwal.personil.map(p => [p.no, p.nama, ...p.jadwal]);
-  const ws = XLSX.utils.aoa_to_sheet([header, ...rows]);
-  XLSX.utils.book_append_sheet(wb, ws, 'Jadwal');
-  XLSX.writeFile(wb, 'jadwal.xlsx');
-}
-
-// Download PDF
-function downloadPDF() {
-  html2canvas(document.querySelector('#tableContainer')).then(canvas => {
-    const img = canvas.toDataURL('image/png');
-    const pdf = new jspdf.jsPDF('landscape');
-    const props = pdf.getImageProperties(img);
-    const w = pdf.internal.pageSize.getWidth();
-    const h = props.height * w / props.width;
-    pdf.addImage(img, 'PNG', 0, 0, w, h);
-    pdf.save('jadwal.pdf');
-  });
-}
-
-document.getElementById('selectPeriode').addEventListener('change', loadJadwal);
-document.getElementById('selectUnit').addEventListener('change', loadJadwal);
-document.addEventListener('DOMContentLoaded', init);
-
+document.getElementById('selectPeriode').addEventListener('change',loadJadwal);
+document.getElementById('selectUnit').addEventListener('change',loadJadwal);
+document.addEventListener('DOMContentLoaded',init);
 </script>
 </body>
 </html>
