--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard Layanan</title>
+<title>SATPAM MAGELANG</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -141,3 +141,4 @@ footer {
 
 </body>
 </html>
+
