--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer {
 
 <header>
   <h1>Selamat Datang</h1>
-  <p>Layanan Informasi & Manajemen Personil</p>
+  <p>Manajemen Jadwal & Manajemen Personil</p>
 </header>
 
 <section class="menu">
@@ -136,9 +136,10 @@ footer {
 </div>
 
 <footer>
-  © 2025 Layanan Terpadu
+  © 2026 "Langkah kecil hari ini adalah kemenangan besar di masa depan"
 </footer>
 
 </body>
 </html>
+
 
