--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ footer {
 </header>
 
 <section class="menu">
-  <a href="pages/jadwal-satpam.html" class="card kerja">JADWAL PELAKSANAAN KERJA</a>
+  <a href="pages/jadwal-kerja.html" class="card kerja">JADWAL PELAKSANAAN KERJA</a>
   <a href="pages/jadwal-absensi.html" class="card absensi">JADWAL PENGIRIMAN ABSENSI</a>
   <a href="pages/backup-personil.html" class="card backup">FORM PERSONIL BACKUP</a>
   <a href="pages/timesheet.html" class="card timesheet">TIMESHEET MAKER</a>
@@ -141,6 +141,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
