--- a/pages/jadwal-absensi.html
+++ b/pages/jadwal-absensi.html
@@ -302,7 +302,7 @@
     </div>
   </div>
 
-  <script src="config.js"></script>
+  <script src="config-jadwal.js"></script>
   <script>
     // Set mode to PEN (Pengiriman/Absensi) for this page
     let currentMode = 'PEN';
