--- a/pages/jadwal-satpam.html
+++ b/pages/jadwal-satpam.html
@@ -407,7 +407,7 @@
     
   </div>
 
-  <script src="config.js"></script>
+  <script src="kerja.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
