--- a/pages/jadwal-satpam.html
+++ b/pages/jadwal-satpam.html
@@ -408,6 +408,6 @@
   </div>
 
   <script src="kerja.js"></script>
-  <script src="app.js"></script>
+  <script src="appkerja.js"></script>
 </body>
 </html>
